--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build-dev": "vue-tsc && vite build --mode build-dev",
+    "build:prod": "vue-tsc && vite build --mode production",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "css-check": "npx stylelint \"**/*.{css,scss,vue}\" ",
+    "css-fix": "npx stylelint \"**/*.{css,scss,vue}\" --fix"
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
     "pinia": "^2.0.34",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
+    "vue-i18n": "9",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -22,6 +28,13 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.38.0",
     "eslint-plugin-vue": "^9.10.0",
+    "normalize.css": "^8.0.1",
+    "postcss-html": "^1.5.0",
+    "sass": "^1.62.0",
+    "stylelint": "^15.5.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended-scss": "^10.0.0",
+    "stylelint-config-standard": "^33.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1",
