add axios, icon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "types": [
+      "vite/client",
+      "vite-plugin-svg-icons/client"
+    ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
