--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build-dev": "vue-tsc && vite build --mode build-dev",
+    "build:build-dev": "vue-tsc && vite build --mode build-dev",
     "build:prod": "vue-tsc && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.13.0",
+    "axios": "^1.3.5",
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "qs": "^6.11.1",
     "vue": "^3.2.47",
     "vue-i18n": "9",
     "vue-router": "^4.1.6"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/node": "^18.15.11",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-vue": "^4.1.0",
@@ -38,6 +41,7 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.2.0"
   }
 }
